Add some API Platform configuration

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,5 +1,7 @@
 api_platform:
     title: Unicorn Guestbook API
+    description: Documentation for the Unicorn Guestbook API
+    show_webby: false
     version: 1.0.0
     defaults:
         stateless: true
